Fix tagging dropdown overlapping.
Fixes #3402

--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -22,9 +22,6 @@
   height: 25px;
   width: 275px;
 
-  @media (max-width: 1100px) {
-    width: 200px;
-  }
   @include phone-portrait {
     width: auto;
     height: 34px;
@@ -43,6 +40,7 @@
     background: transparent;
     outline: none;
     flex: 1;
+    width: 0;
   }
 }
 
@@ -124,8 +122,7 @@
     }
   }
   .bulk-tag-select {
-    bottom: 2px;
-    background-color: #2e2e2e;
+    background-color: #444;
     position: relative;
     color: white;
   }
